fixes flickering and styling

--- a/src/Pages/Intro/IntroPage.css
+++ b/src/Pages/Intro/IntroPage.css
@@ -196,4 +196,7 @@ p {
     .intro {
         grid-column: 1/2;
     }
+    .illustration-1{
+        padding-left: 10%;
+    }
 }
